--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,22 +30,22 @@
     <div class="container">
         <h1>Get a joke to make you laugh today 🤣</h1>
 
-        <div class="name-input">
-            <label for="name" class="name-label">Name:</label>
-            <input type="text" name="name" placeholder="Write Your Name" id="name-id">
-        </div>
-
         <form action="/submit" method="post" id="form">
+            <div class="name-input">
+                <label for="name" class="name-label">Name:</label>
+                <input type="text" name="name" placeholder="Write Your Name" id="name-id">
+            </div>
+
             <div class="category-select">
                 <div class="header" >Choose a category:</div>
-            <select name="categpries" class="form" id="cate-form">
-                <option value="" data-display="Select">Any</option>
-                <option value="programming">programming</option>
-                <option value="misc">Misc</option>
-                <option value="pun">Pun</option>
-                <option value="spooky">Spooky</option>
-                <option value="dark">Dark</option>
-                <option value="christmass">Christmas</option>
+            <select name="categories" class="form" id="cate-form">
+                <option value="Any" data-display="Select">Any</option>
+                <option value="Programming">Programming</option>
+                <option value="Misc">Misc</option>
+                <option value="Pun">Pun</option>
+                <option value="Spooky">Spooky</option>
+                <option value="Dark">Dark</option>
+                <option value="Christmass">Christmas</option>
             </select>
         </div>
         <div class="category-select">
@@ -62,13 +62,8 @@
         </div>
         <div class="type">
             <label for="type" class="type-header">Type:</label>
-            <input type="checkbox" name="single" id="single"><span>Single</span>
-            <input type="checkbox" name="two-part" id="two-part"><span>Two-part</span>
-        </div>
-
-        <div class="amount">
-            <label for="Amount" class="amount-header">Amount:</label>
-            <input type="text" name="amount" value="1" class="amount-input">
+            <input type="text" name="single" placeholder="single" id="single"><span>Single</span>
+            <input type="text" name="twopart" placeholder="two-part"  id="two-part"><span>Two-part</span>
         </div>
 
         <div class="form-button">
@@ -80,9 +75,51 @@
 
 <!--Joke section-->
 <section id="section3">
-    <div class="jokes">
 
-    </div>
+        <div class="jokes">
+
+            <div class="username">
+                <% if (locals.userName) { %>
+                    <h1>
+                        <%=userName %>
+                    </h1>
+
+                    <p>Here is your joke</p>
+                <% } %>
+            </div>
+
+             <% if (locals.content) { %>
+              <% if (content.type === "single") { %>
+               <%= content.joke %>
+              <% } else if (content.type === "twopart") { %>
+                <%= content.setup %>
+                <p>
+                    <%= content.delivery %>
+                </p>
+             <% } %>
+             
+             <div class="details">
+                <div class="category">
+                    Category:
+                    <%= content.category %>
+                </div>
+                <div class="type">
+                    Type:
+                    <%= content.type %>
+                </div>
+                <div class="language">
+                    Language:
+                    <%= content.lang %>
+                </div>
+             </div>
+             <% } %>
+
+             <% if (locals.error) { %>
+              <%= error %>
+             <% } %>
+
+        </div>
+
 </section>
 
 
