--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,10 +16,9 @@
 
         <nav>
             <ul class="list-items">
-                <li class="items"><a href="/index.html">Home</a></li>
-                <li class="items"><a href="/create.html">Write Your Joke</a></li>
-                <li class="items"><a href="/seejokes.html">See Jokes</a></li>
-                <li class="items"><a href="/contact.html">Contact</a></li>
+                <li class="items"><a href="/">Home</a></li>
+                <li class="items"><a href="/seejokes">See Jokes</a></li>
+                <li class="items"><a href="/contact">Contact</a></li>
             </ul>
         </nav>
     </header>
